Added collision logging & dynamic text

--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,12 @@
        <button id="down"></button>
      </div>
     </div>
-      <p id="text-1" class="text">Use cursor keys or buttons to move the marble.</p>
+      <textarea id="text"></textarea>
   </div>
-  
-  
   <!-- custom js -->
+  <script src="js/typewriter.js"></script>
   <script src="js/script.js"></script>
   <script src="js/utilities.js"></script>
+  
 </body>
 </html>
