Added hotkey functionality for intended Alexa Skill response

--- a/public/index.html
+++ b/public/index.html
@@ -22,23 +22,20 @@
     </div>
     
     <!-- controls-->
-    <div id="controls">
+    <!-- <div id="controls">
       <button id="up"></button>
       <div id="horiz">
          <button id="left"></button>
          <button id="right"></button>
       </div>
        <button id="down"></button>
-     </div>
+     </div> -->
     </div>
       <textarea id="text"></textarea>
   </div>
   <!-- custom js -->
   <script src="js/typewriter.js"></script>
-<<<<<<< HEAD
-=======
   <script src="js/script.js"></script>
->>>>>>> 289852d6d05bafbc7458a872c806523bb3485214
   <script src="js/utilities.js"></script>
   
 </body>
